fix favorites offscreen at high scaling modes

--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -128,7 +128,7 @@ body {
   position: absolute;
   z-index: 99;
   padding: 10px;
-  transform: translate(150px, 420px);
+  transform: translate(3vw, 420px);
   background-color: #fff;
   border-radius: 5px;
   border: 1px solid #ccc;
